--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
+    "@auth/mongodb-adapter": "^2.0.12",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
@@ -48,6 +49,8 @@
     "geist": "^1.3.1",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
+    "mongodb": "^5.9.1",
+    "mongoose": "^8.18.1",
     "next": "14.2.16",
     "next-auth": "^4.24.11",
     "next-themes": "latest",
@@ -68,6 +71,7 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^17.2.2",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
